[gd_scene load_steps=11 format=4 uid="uid://b8d3qqab2c21t"]

[ext_resource type="Script" path="res://scenes/hospital/Endings/bad_ending/bad_ending.gd" id="1_2t332"]
[ext_resource type="TileSet" uid="uid://c348q58upmtsm" path="res://rooms.tres" id="2_xkt3i"]
[ext_resource type="PackedScene" uid="uid://c1theyee7bb6k" path="res://entities/npcs/HostileZombies.tscn" id="3_3swga"]
[ext_resource type="PackedScene" uid="uid://cr4q58p5skp00" path="res://entities/npcs/Director.tscn" id="4_wvif6"]
[ext_resource type="PackedScene" uid="uid://bps2i2ug5faaa" path="res://entities/npcs/Yosef.tscn" id="5_w3atf"]
[ext_resource type="PackedScene" uid="uid://718yx8jykyi5" path="res://entities/npcs/Penelope.tscn" id="6_65un1"]
[ext_resource type="PackedScene" uid="uid://dqm0mk3hhq2c0" path="res://entities/player/player.tscn" id="7_0ff6c"]
[ext_resource type="PackedScene" uid="uid://dklxgwl1bkqaa" path="res://systems/dialoguesystem/Dialogue.tscn" id="8_wd7gj"]
[ext_resource type="Texture2D" uid="uid://clpsr40dt38ry" path="res://assets/misc/Love_Letter.png" id="9_2t332"]
[ext_resource type="Script" path="res://scenes/hospital/Endings/bad_ending/boss_room_area.gd" id="10_y2ul2"]

[node name="BadEnding" type="Node2D"]
script = ExtResource("1_2t332")

[node name="Tilemaps" type="Node2D" parent="."]

[node name="floors" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AAAYAA0AAgAMABAAAAAYAA4AAgAMABIAAAAZAA0AAgANABAAAAAZAA4AAgANABEAAAAaAA0AAgAOABAAAAAaAA4AAgAMABIAAAAbAA0AAgAMABIAAAAbAA4AAgAMABMAAAAcAA0AAgANABIAAAAcAA4AAgANABMAAAAdAA0AAgAOABIAAAAdAA4AAgAOABMAAAAeAA0AAgAMABIAAAAeAA4AAgAMABMAAAAfAA0AAgAMABIAAAAfAA4AAgANABMAAAAgAA0AAgAMABIAAAAgAA4AAgAOABMAAAAYAA8AAgAMABIAAAAYABAAAgAMABMAAAAZAA8AAgANABIAAAAZABAAAgANABMAAAAaAA8AAgAOABIAAAAaABAAAgAOABMAAAAbAA8AAgAMABIAAAAbABAAAgAMABMAAAAcAA8AAgANABIAAAAcABAAAgANABMAAAAdAA8AAgAOABIAAAAdABAAAgAOABMAAAAeAA8AAgAMABIAAAAeABAAAgAMABIAAAAfAA8AAgANABIAAAAfABAAAgANABIAAAAgAA8AAgAOABIAAAAgABAAAgAOABIAAAAYABEAAgAMABIAAAAYABIAAgAMABMAAAAZABEAAgANABIAAAAZABIAAgANABMAAAAaABEAAgAOABIAAAAaABIAAgAOABMAAAAbABEAAgAMABIAAAAbABIAAgAMABIAAAAcABEAAgANABIAAAAcABIAAgANABIAAAAdABEAAgAMABAAAAAdABIAAgAMABEAAAAeABEAAgANABAAAAAfABEAAgAOABAAAAAfABIAAgAOABEAAAAgABEAAgAOABMAAAAgABIAAgAOABMAAAAhAA0AAgAMABAAAAAhAA4AAgAMABIAAAAiAA0AAgANABAAAAAiAA4AAgANABEAAAAjAA0AAgAOABAAAAAjAA4AAgAOABEAAAAhAA8AAgAMABIAAAAhABAAAgAMABMAAAAiAA8AAgAMABIAAAAiABAAAgANABMAAAAjAA8AAgAOABEAAAAjABAAAgAOABMAAAAhABEAAgAMABIAAAAhABIAAgAMABMAAAAiABEAAgANABIAAAAiABIAAgANABMAAAAjABEAAgAOABIAAAAjABIAAgAOABMAAAAYABMAAgAMABAAAAAZABMAAgANABAAAAAZABQAAgAOABAAAAAaABMAAgAOABAAAAAaABQAAgAOABEAAAAbABMAAgAMABMAAAAbABQAAgAMABMAAAAcABMAAgANABMAAAAcABQAAgANABMAAAAdABMAAgAOABMAAAAdABQAAgAOABMAAAAeABMAAgAMABIAAAAeABQAAgAMABMAAAAfABMAAgANABIAAAAfABQAAgANABMAAAAgABMAAgAOABIAAAAgABQAAgAMABIAAAAhABMAAgAMABIAAAAhABQAAgANABIAAAAiABMAAgANABIAAAAiABQAAgAOABIAAAAjABMAAgAOABIAAAAZABUAAgAOABEAAAAaABUAAgANABIAAAAbABUAAgAOABIAAAAcABUAAgANABIAAAAdABUAAgAOABIAAAAeABUAAgAMABIAAAAfABUAAgAMABIAAAAgABUAAgAMABMAAAAhABUAAgAMABIAAAAiABUAAgANABAAAAAZAAsAAgAMABIAAAAZAAwAAgAMABMAAAAaAAsAAgANABIAAAAaAAwAAgANABMAAAAbAAsAAgAOABIAAAAbAAwAAgAOABMAAAAcAAsAAgAMABIAAAAcAAwAAgAMABMAAAAdAAsAAgANABIAAAAdAAwAAgANABMAAAAeAAsAAgAOABIAAAAeAAwAAgAOABMAAAAfAAsAAgAMABAAAAAfAAwAAgAMABIAAAAgAAsAAgANABAAAAAgAAwAAgANABEAAAAhAAsAAgAOABAAAAAhAAwAAgAOABEAAAAiAAsAAgANABIAAAAiAAwAAgANABMAAAAeABIAAgANABEAAAA=")
tile_set = ExtResource("2_xkt3i")

[node name="walls" type="TileMapLayer" parent="Tilemaps"]
position = Vector2(0, 30)
tile_map_data = PackedByteArray("AAAZAAoAAgAMABkAAAAaAAoAAgANABkAAAAbAAoAAgAOABkAAAAcAAoAAgAMABkAAAAeAAoAAgAOABkAAAAfAAoAAgAMABkAAAAgAAoAAgAMABkAAAAhAAoAAgANABkAAAAiAAoAAgAOABkAAAAYAAsAAgAOABkAAAAjAAsAAgAMABkAAAAZAAkAAgAMABgAAAAaAAkAAgANABgAAAAbAAkAAgAOABgAAAAcAAkAAgAMABgAAAAdAAkAAgANABgAAAAeAAkAAgAOABgAAAAfAAkAAgAMABgAAAAgAAkAAgAMABgAAAAhAAkAAgANABgAAAAiAAkAAgAOABgAAAAjAAoAAgAMABgAAAAYAAoAAgAOABgAAAAZAAgAAgAAACIAAAAaAAgAAgAAACIAAAAbAAgAAgAAACIAAAAcAAgAAgAAACIAAAAdAAgAAgAAACIAAAAeAAgAAgAAACIAAAAfAAgAAgAAACIAAAAgAAgAAgAAACIAAAAhAAgAAgAAACIAAAAiAAgAAgAAACIAAAAjAAkAAgAAACIAAAAYAAkAAgAAACIAAAAdAAoAAgANABkAAAA=")
tile_set = ExtResource("2_xkt3i")

[node name="HostileZombies" parent="." instance=ExtResource("3_3swga")]
position = Vector2(481, 213)

[node name="HostileZombies2" parent="." instance=ExtResource("3_3swga")]
position = Vector2(531, 221)

[node name="HostileZombies3" parent="." instance=ExtResource("3_3swga")]
position = Vector2(435, 221)

[node name="Director" parent="." instance=ExtResource("4_wvif6")]
position = Vector2(478, 247)

[node name="Yosef" parent="." instance=ExtResource("5_w3atf")]
position = Vector2(476, 281)

[node name="Penelope" parent="." instance=ExtResource("6_65un1")]
position = Vector2(504, 338)

[node name="Player" parent="." instance=ExtResource("7_0ff6c")]
position = Vector2(394, 267)

[node name="Dialogue" parent="." instance=ExtResource("8_wd7gj")]

[node name="LoveLetter" type="Sprite2D" parent="."]
position = Vector2(565, 302)
scale = Vector2(0.11875, 0.13125)
texture = ExtResource("9_2t332")

[node name="boss_room_area" type="Area2D" parent="."]
script = ExtResource("10_y2ul2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boss_room_area"]
build_mode = 1
polygon = PackedVector2Array(385, 172, 384, 319, 400, 320, 401, 351, 561, 351, 560, 318, 577, 319, 577, 191, 561, 192, 560, 174, 402, 175, 403, 192, 385, 193)
